# spawn

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: security-scan.yml
docs/manual/: index.html  index.md  manual.yaml
docs/manual/01-user-guide/: 01-getting-started.md  02-installation.md  03-quick-start.md  04-worked-examples.md
docs/manual/02-api-reference/: 01-overview.md
docs/manual/03-architecture/: 01-system-overview.md  02-data-models.md
docs/manual/04-reference/: 01-configuration.md  02-error-handling.md
docs/manual/05-appendix/: 01-glossary.md  02-faq.md  03-changelog.md
examples/generated-mcp/: MCP_INFO.md  README.md  pyproject.toml  server.py
src/: README.md
src/mcp_builder_mcp/: README.md  __init__.py  server.py
src/mcp_builder_mcp/extractor/: README.md  __init__.py  pattern_extractor.py
src/mcp_builder_mcp/generator/: README.md  __init__.py  generator_engine.py  validator.py
src/mcp_builder_mcp/models/: README.md  __init__.py  pattern.py  score.py
tests/: README.md  __init__.py  conftest.py
tests/e2e/: README.md  __init__.py  test_generator_tools.py  test_library_tools.py  test_mcp_tools.py  test_pipeline_tools.py
tests/fixtures/: README.md
tests/integration/: README.md  __init__.py  test_analyze_pipeline.py  test_generate_pipeline.py
tests/unit/: README.md  __init__.py  test_generator.py  test_learning.py  test_log_parser.py  test_minna_sync.py  test_pattern_extractor.py  test_pattern_store.py  test_scoring_engine.py  test_validator.py
(+18 files in other folders)
