[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "spawn"
version = "0.1.0"
description = "Meta-MCP server - analyzes patterns in AI agent sessions and generates new MCP servers from them"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Fredrik Bratten", email = "fredrik.bratten@adaptivearts.ai"}
]
keywords = ["mcp", "patterns", "automation", "code-generation"]

dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.15.10",
    "pyright>=1.1",
]

[project.scripts]
mcp-builder-mcp = "mcp_builder_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_builder_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E402"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
include = ["src"]
